Changed terminal fontface

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "code-runner.runInTerminal": true,
-    "terminal.integrated.fontFamily": "'Fira Code', monospace"
+    "terminal.integrated.fontFamily": "'Agave', monospace"
 }
